--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -142,7 +142,7 @@ body {
 .modal-dialog {
     margin: 0;
     height: 50%;
-    width: 300px;
+    width: 100px;
     float: right;
 }
 
@@ -157,7 +157,7 @@ body {
     -o-box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
     border: none;
-    width: 300px;
+    width: 207px;
     float: right;
 }
 
@@ -317,10 +317,7 @@ label {
     color: ghostwhite;
 }
 
-#rotate {
-    z-index: -1000;
-    display: none;
-}
+
 
 textarea {
     height: 150px;
@@ -370,13 +367,13 @@ textarea:focus {
 
 .noise1 {
     animation: glitch1 3s infinite linear alternate-reverse;
-    left: 1px;
+    left: -1px;
     text-shadow: 3px 0 #1b91fb;
 }
 
 .noise2 {
     animation: glitch2 2s infinite linear alternate-reverse;
-    left: -1px;
+    left: 1px;
     text-shadow: -3px 0 #1b91fb;
 }
 
@@ -535,7 +532,7 @@ iframe {
     top: 0;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 106vh;
     background: #222;
 }
 
@@ -605,34 +602,11 @@ input {
     }
     #alert {
         bottom: 0;
-        top: 16%;
+        top: 16vh;
     }
     #alert2 {
         bottom: 0;
-        top: 16%;
+        top: 16vh;
     }
 }
 
-@media (max-width: 800px) and (orientation: landscape) {
-    #rotate {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: #222;
-        opacity: 1;
-        z-index: 999999999;
-        display: block;
-        top: 0;
-    }
-    #rotate img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-    }
-    #hi {
-        display: none;
-    }
-}
