--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,7 +215,7 @@ h2 {
 .modal-dialog {
     margin: 0;
     height: 50%;
-    width: 300px;
+    width: 100px;
     float: right;
     background-color: #181D27;
     background-color: rgba(128, 128, 128, 0);
@@ -236,7 +236,7 @@ h2 {
     -o-box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0);
     border: none;
-    width: 300px;
+    width: 207px;
     float: right;
 }
 
@@ -293,7 +293,7 @@ button span {
     top: 0;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 106vh;
     background: #222;
     z-index: 99999999999999;
 }
@@ -428,7 +428,7 @@ button span {
         width: 130px;
     }
     #eleven {
-        bottom: 60px;
+        bottom: 53px;
         left: 70%;
     }
     h1 {
